deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codebase-wiki
  namespace: wiki-team
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - wiki-team.hackathon.sev-2.com
  rules:
    - host: wiki-team.hackathon.sev-2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codebase-wiki
                port:
                  number: 80
